--- a/snippets/changelog/2025-05-12.mdx
+++ b/snippets/changelog/2025-05-12.mdx
@@ -2,7 +2,7 @@
 
 ## New Conversation Evaluation Metrics
 
-You can now evaluate conversations with greater precision using these new metrics:
+You can now [evaluate conversations](/sdk/examples/monitor-production-responses-to-user-queries#evaluating-conversations) using these new metrics:
 - **Role Adherence** - Assess how well an AI stays within its defined role
 - **Knowledge Retention** - Measure how effectively information is remembered throughout a conversation
 - **Conversation Completeness** - Evaluate whether all user queries were fully addressed
